[package]
name = "kumaClient"
version = "0.1.0"
edition = "2021"
description = "WIP client to connect to https://github.com/louislam/uptime-kuma"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_socketio = { version = "0.4.3"}
log = "0.4.20"
anyhow = "1.0.75"
serde = { version = "1.0.189", features = ["derive"] } # for our async / await blocks
serde_json = "1.0.107"
